fix blocknote arrow overlapping

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -83,6 +83,7 @@
 .tippy-box {
   background-color: transparent !important;
   background: transparent !important;
+  z-index: 10;
 }
 .tippy-arrow {
   display: none !important;
